<resources>
    <string name="app_name">Haryana Gk in Hindi English</string>
    <string name="e">E</string>
    <string name="haryanvi">ह</string>
    <string name="h">H</string>
    <string name="english">English</string>
    <string name="haryanvi_text">हरियाणवी</string>
    <string name="hindi_text">हिंदी</string>
    <string name="haryana_gk_quiz"><![CDATA[Haryana GK & Quiz]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">-----Or-----</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">User Name</string>
    <string name="e_mail">E - Mail</string>
    <string name="select_language">Questions Language</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_login_with">Or Login With</string>
    <string name="skip">skip</string>
    <string name="login">Login</string>
    <string name="choose_type">Choose Type</string>
    <string name="dont_haa">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Haryana Gk</string>
    <string name="nav_header_subtitle">lovely172017@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_english">English</string>
    <string name="action_hindi">Hindi</string>
    <string name="does_not_match">Password Doesn\'t Match</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="incorrect_password">Incorrect email or Password</string>
    <string name="password_length">Password (Min 8 Character)</string>
    <string name="forgot_password_fpf">Forgot Password ?</string>
    <string name="dont_worry_we">Don\'t worry, we just need your Registered email address and its done!</string>
    <string name="enter_your_registered">enter your registered email</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back"><![CDATA[< < Go Back]]></string>
    <string name="check_your_inbox_after">Recovery email sent Successfully ! Check your inbox</string>
    <string name="right_aero"><![CDATA[>]]></string>
    <string name="categories">Categories</string>
    <string name="saLashNew">/</string>
    <string name="questionTen">Questions 15</string>
    <string name="dontGiveUp">Don\'t Give Up!</string>
    <string name="wellPlayed">Well Played!</string>
    <string name="practiceMakes">Practice makes a man perfect</string>
    <string name="congratulations">Congratulations.\nTry next Level</string>
    <string name="winGame">Winner</string>
    <string name="get_started">Get started</string>
    <string name="plus_symbol">+</string>

    <string name="percentSymbol">%</string>
    <string name="level">Level</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="loading">Loading…</string>
    <string name="pointsValue">10</string>

    <string name="adMob_appId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adMob_bannerId">ca-app-pub-3940256099942544/9214589741</string>
    <string name="adMob_interstitialId">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adMob_rewardedId">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adMob_nativeAdId">ca-app-pub-3940256099942544/2247696110</string>

    <string name="menu_home">Refresh</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_language">Language</string>
    <string name="menu_more_apps">More apps</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="action_exit">Exit</string>
    <string name="nothing">1/15</string>
    <string name="sample_question">Sample Question</string>
    <string name="hint">Hint</string>
    <string name="no_ads_available">"No Ads Available! \nTry again after few minutes"</string>
    <string name="free_hints">Points</string>
    <string name="button">Button</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="better_luck_next_time">Better luck next time</string>
    <string name="twenty_for_percent">24%</string>
    <string name="out_of_total">6/25</string>
    <string name="sample_level">Level 3</string>
    <string name="choose_level">Choose Level</string>
    <string name="haryana_gk">Haryana Gk</string>
    <string name="sets">sets</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="practice_sets">Practice Sets</string>
    <string name="earn_free_hints">Earn Free Hints</string>
    <string name="watch_a_video">Watch a video ad to earn free \nhints</string>
    <string name="video">Video</string>
    <string name="headline">headline</string>
    <string name="advertiser">advertiser</string>
    <string name="body_of_ad">body of ad</string>
    <string name="price">price</string>
    <string name="action">Action</string>
    <string name="no_enough_points">No enough points! Earn some points</string>
    <string name="play">Play</string>
    <string name="available_soon">Available Soon</string>
    <string name="report_us">report us if something is wrong</string>
    <string name="about_data">This app is developed by Techie Tech. Best app \n for Govt. Exams preparation</string>
    <string name="privacy_policy">https://techietech1.blogspot.com/2019/11/haryana-gk-in-hindi-englis-privacy.html</string>
    <string name="haryana_hindi">हरियाणा</string>
    <string name="question">Question</string>
    <string name="ans">Ans</string>


</resources>
