<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_rate"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_more"
            android:title="@string/menu_more_apps" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_language" />
    </group>

    <item android:title="@string/communicate">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_pp"
                android:icon="@drawable/ic_menu_pp"
                android:title="@string/menu_privacy_policy" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_logout" />
        </menu>

    </item>

</menu>
