<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/category_bg"
    android:padding="10dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_setsView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@mipmap/haryana_map"
        android:backgroundTint="@color/colorHaryanaGk"
        android:backgroundTintMode="multiply"
        android:layout_marginTop="5dp"
        app:civ_border_color="@color/colorWhite" />

    <LinearLayout
        android:id="@+id/layout_afterFbLogo_sets"
        android:layout_toEndOf="@id/circle_image_setsView"
        android:layout_toStartOf="@id/layout_after_textSets"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_category_setsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haryana_gk"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sets_setsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/colorSets" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_after_textSets"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginStart="15dp">

        <Button
            android:id="@+id/play_sets_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/play"
            android:background="@drawable/btn_startquiz"
            android:textSize="20sp"
            android:clickable="false"/>

    </LinearLayout>


</RelativeLayout>