<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment"
    android:background="@drawable/bg_transparent">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password_fpf"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dont_worry_we"
        android:textAlignment="center"
        android:textColor="@color/colorHaryanaGk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/et_email_forgotpwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorHaryanvi"
        android:ems="10"
        android:hint="@string/enter_your_registered"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorHaryanvi"
        android:textColorHint="@color/buttonBorder"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="@+id/btn_resetPassword"
        app:layout_constraintStart_toStartOf="@+id/btn_resetPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_resetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button_transparent"
        android:enabled="false"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/buttonBorder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_forgotpwd" />

    <TextView
        android:id="@+id/tv_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/go_back"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/forgot_pwd_icon_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_resetPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_email_forgotpwd"
        app:layout_constraintStart_toStartOf="@+id/et_email_forgotpwd"
        app:layout_constraintTop_toBottomOf="@+id/et_email_forgotpwd"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView_emailIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_email_red"
            android:visibility="gone"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/tv_emailSuccesfullySent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/check_your_inbox_after"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_forgotPwd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:theme="@style/AppProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_resetPassword"
        app:layout_constraintEnd_toEndOf="@+id/forgot_pwd_icon_container"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/forgot_pwd_icon_container"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_icon_container" />

</androidx.constraintlayout.widget.ConstraintLayout>