<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <include
        layout="@layout/background_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:src="@mipmap/haryana_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText_name_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/colorHaryanvi"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/colorHaryanaGk"
            android:textColorHint="@color/buttonBorder"
            android:textColorLink="@color/colorDontHaveAccount"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/editText_email_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/colorHaryanvi"
            android:ems="10"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/colorHaryanaGk"
            android:textColorHint="@color/buttonBorder"
            android:textColorLink="@color/colorDontHaveAccount"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="@+id/editText_name_signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_name_signup"
            app:layout_constraintTop_toBottomOf="@+id/editText_name_signup" />

        <EditText
            android:id="@+id/editText_password_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/colorHaryanvi"
            android:ems="10"
            android:hint="@string/password_length"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorHaryanaGk"
            android:textColorHint="@color/buttonBorder"
            android:textColorLink="@color/colorDontHaveAccount"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="@+id/editText_email_signup"
            app:layout_constraintStart_toStartOf="@+id/editText_email_signup"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_signup" />

        <EditText
            android:id="@+id/editText_confirm_pwd_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/colorHaryanvi"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorHaryanaGk"
            android:textColorHint="@color/buttonBorder"
            android:textColorLink="@color/colorDontHaveAccount"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="@+id/editText_password_signup"
            app:layout_constraintStart_toStartOf="@+id/editText_password_signup"
            app:layout_constraintTop_toBottomOf="@+id/editText_password_signup" />


        <Button
            android:id="@+id/button_signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/button_transparent"
            android:backgroundTint="@color/buttonBorder"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/buttonBorder"
            android:textSize="23sp"
            android:enabled="false"
            android:theme="@style/AppTheme.PopupOverlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_confirm_pwd_signup" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signUp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/textView_alreadyhaveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/textView_signin_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:textColor="@color/colorHaryanvi"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_signup"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/button_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_confirm_pwd_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>